--- a/src/views/components/footer/footer.twig
+++ b/src/views/components/footer/footer.twig
@@ -1,5 +1,5 @@
-<footer class="store-footer">
-	<div aria-label="footer" class="store-footer__inner">
+<footer class="store-footer" style="background: #ffffff;">
+	<div aria-label="footer" class="store-footer__inner" style="background: #ffffff;">
 		<div class="container grid grid-col-1 lg:grid-cols-6 gap-8 lg:gap-6">
 			<div class="lg:col-span-2 rtl:lg:pl-20 ltr:lg:pr-20">
 				<a href="{{ link('/') }}" class="flex items-center m-0">
@@ -63,7 +63,7 @@
 		</div>
 	</div>
 
-	<div class="md:flex items-center justify-between py-4 container text-center">
+	<div class="md:flex items-center justify-between py-4 container text-center" style="background: #ffffff;">
 		<span class="text-sm copyright-text">{% hook copyright %}</span>
 		<salla-payments></salla-payments>
 	</div>
